[package]
name = "epik-ddns"
version = "0.1.0"
edition = "2024"

[dependencies]
config = { version = "0.15.11"}
cron-job = "0.2.0"
dns-lookup = "2.0.4"
log = { version = "0.4.27", features = ["release_max_level_info"] }
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
simple_logger = "5.0.0"
